[package]
name = "enum_access"
version = "0.4.2"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]

description = "Custom derive for automatically generating the accessor methods for Enums"
keywords = ["enum", "macros", "proc-macros", "accessor"]
license = "MIT/Apache-2.0"
repository = "https://github.com/boncheolgu/enum_access"
readme = "README.md"

[lib]
proc-macro = true
[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"

[dependencies.syn_util]
version = "0.4"

[dependencies.synstructure]
version = "0.12"
